<resources>
    <string name="app_name">Tweeter</string>

    <string name="logoutMenuTitle">Logout</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">Tweeter</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleUserName">The User</string>
    <string name="title_activity_login">Sign in</string>
    <string name="followeeCount">Following: %d</string>
    <string name="followerCount">Followers: %d</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password_prompt">Password:</string>
    <string name="dummy_password">randomPass1</string>
    <string name="photo_url_prompt">Photo URL:</string>
    <string name="login_prompt">Login</string>
    <string name="register_button_prompt">Register</string>
    <string name="login_button_prompt">Login</string>
    <string name="dummy_username">\@AllenAnderson</string>
    <string name="user_name_prompt">User Name:</string>
    <string name="last_name_prompt">Last Name:</string>
    <string name="first_name_prompt">First Name:</string>
    <string name="sampleTimeStamp">6:00</string>
    <string name="sample_message">This is a very long tweet to show what it looks like when the
    tweet just keeps going</string>
    <string name="sample_mention">\@mention</string>
    <string name="sample_link">google.com</string>
</resources>
