<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".client.view.LoginActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:stretchColumns="3"
        tools:context=".view.LoginActivity">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/first_name_prompt" />
            <EditText
                android:id="@+id/firstNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textPersonName" />
            <!--                    tools:text="Host:number" />-->
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/last_name_prompt" />
            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textPersonName" />
            <!--                    tools:text="Host:number" />-->
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/user_name_prompt" />
            <EditText
                android:id="@+id/usernameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textPersonName" />
                <!--android:text="@string/dummy_username"-->
            <!--                    tools:text="Host:number" />-->
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/password_prompt" />
            <EditText
                android:id="@+id/passwordField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textPassword" />
                <!--android:text="@string/dummy_password" -->
            <!--                    tools:text="Host:number" />-->
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/photo_url_prompt" />
            <EditText
                android:id="@+id/photoUrlField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="3"
                android:inputType="textUri" />
            <!--                    tools:text="Host:number" />-->
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="20dp">
            <Button
                android:id="@+id/LoginButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/login_button_prompt"/>
            <Button
                android:id="@+id/RegisterButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button_prompt"/>
        </LinearLayout>
    </TableLayout>
<!--    <TextView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="An almost completely unimplemented login activity. Replace this with your own and update the code in LoginService."-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_margin="16dp"-->
<!--        android:layout_above="@id/LoginButton"/>-->

<!--    <Button-->
<!--        android:id="@+id/LoginButton"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="Push this Button to Login with a Hard-Coded User"-->
<!--        android:layout_centerInParent="true"/>-->
</RelativeLayout>